[package]
name = "erlang-term"
version = "0.1.0"
authors = ["Thomas <thomastimmer11@hotmail.com>"]
edition = "2018"
description = "Library to convert Erlang External Term Format to Rust objects, without using erlang NIFs."
keywords = ["erlang", "elixir", "serde"]
categories = ["encoding", "parser-implementations"]
repository = "https://github.com/thomas9911/erlang-term"
license = "Unlicense"

[dependencies]
nom = "5.1"
num-bigint = "0.2"
num-traits = "0.2"
keylist = "0.1"
serde = {version = "1.0", optional = true}
serde_derive = {version = "1.0", optional = true}
serde_json = {version = "1.0", optional = true}

[dev-dependencies]

[features]
serde_impl = ["serde", "serde_derive", "serde_json", "keylist/serde", "num-bigint/serde"]
